# openrelik-worker-chromecreds

./: README.md  Tiltfile  openrelik.yaml  pyproject.toml
src/: tasks.py
tests/: test_chromecreds.py
