[tool.poetry]
name = "openrelik-worker-chromecreds"
version = "2025.03.03"
description = "Extracts and analyses stored Chrome credentials"
authors = ["Fry <fryx0r@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
celery = {extras = ["redis"], version = "^5.4.0"}
openrelik-worker-common = "^2024.11.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
